--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
+  "endOfLine": "lf",
+  "jsxSingleQuote": true,
   "printWidth": 120,
   "semi": false,
-  "singleQuote": true,
+  "singleQuote": true
 }
