--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint-fix": "eslint --fix './src/**/*.{js,ts,tsx}' && prettier --write './src/**/*.{js,ts,tsx}'"
+    "lint-fix": "eslint --fix './src/**/*.{js,ts,tsx}' && prettier --write ."
   },
   "browserslist": {
     "production": [
